# mandelbrot_dis_vector

./: CMakeLists.txt  mandelbrot_dis_vector.cpp
